Refactor: graph